<resources>
    <string name="app_name">tactoe</string>
    <string name="next_turn_x">Next turn: X</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
</resources>