<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"

    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray">

        <!-- Buttons for the Tic Tac Toe grid -->
        <Button
            android:id="@+id/button_00"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:hint="@string/_0"/>

        <Button
            android:id="@+id/button_01"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:hint="@string/_1"/>

        <Button
            android:id="@+id/button_02"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:hint="@string/_2"/>

        <Button
            android:id="@+id/button_10"
            android:layout_width="75dp"
            style="@style/TicTacToeButton"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/_3"/>

        <Button
            android:id="@+id/button_11"
            android:layout_width="75dp"
            style="@style/TicTacToeButton"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/_4"/>

        <Button
            android:id="@+id/button_12"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_row="1"
            android:layout_column="2"
            android:hint="@string/_5"/>

        <Button
            android:id="@+id/button_20"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/_6"/>

        <Button
            android:id="@+id/button_21"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/_7"/>

        <Button
            android:id="@+id/button_22"
            style="@style/TicTacToeButton"
            android:layout_width="75dp"
            android:layout_row="2"
            android:layout_column="2"
            android:hint="@string/_8"/>
    </GridLayout>

    <!-- Reset Button -->
    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_below="@id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Status Text -->
    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_turn_x"
        android:layout_below="@id/button_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
